--- a/x10.lib/src/sched/Makefile
+++ b/x10.lib/src/sched/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.8 2007-06-25 21:11:38 sriramk Exp $
+# $Id: Makefile,v 1.9 2007-06-27 15:22:54 sriramk Exp $
 # This file is part of X10 Runtime System.
 #
 
@@ -18,11 +18,11 @@
 MAKE = make
 #CXX = mpCC_r -q64 -qarch=pwr5
 CXX = xlC_r
-DEFS += -DNDEBUG
-CXXFLAGS = -O4 -ma -Q -q64 -qarch=pwr5 -qmaxmem=-1 -qunwind -qinline #-g #-qtune=pwr5 -O3 -qhot
+#DEFS += -DNDEBUG
+CXXFLAGS = -g #-q64 #-qarch=pwr5 -qmaxmem=-1 #-qunwind #-ma -qhot #-Q -qinline #-g #-qtune=pwr5 -O3 -qhot
 
 INCLUDES = -I../../include
-LINKFLAGS = -r -b64
+LINKFLAGS = -r #-b64
 RM = rm -f
 LD = ld
 AR = ar
